CI images update

--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-24 22:16:31
+lastsearch = 2024-07-24 23:15:49
 
 [erado.vn]
 match = 0.0%%
@@ -109,7 +109,7 @@ url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18
 [giuongbenhbaominh.vn]
 match = -95.0%%
 title = Top 10 mẫu giường xếp có nệm giá rẻ tốt nhất năm 2020
-url = https://giuongbenhbaominh.vn/giuong-xep-co-nem-gia-re-tot-nhat?srsltid=AfmBOoqdf4sDQJriQ-FCIHeUwv8Y-9o5HtQyR62WvRUy5EplALtGCZdP
+url = https://giuongbenhbaominh.vn/giuong-xep-co-nem-gia-re-tot-nhat
 
 [theonenoithat.com]
 match = -30.0%%
