--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-07-24 22:52:15
+lastsearch = 2024-07-24 23:19:25
 
 [demxanh.com]
-match = -3.3%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = -10.0%%
+title = Đón tân sinh viên - SALE chăn ga gối đệm tới 50%%++
+url = https://demxanh.com/don-tan-sinh-vien-sale-chan-ga-goi-dem-toi-50.html?srsltid=AfmBOop-qer0hu-W1ub1v22OPBWf1B5RxKGsK32RA8ppaPhrzmJNWT4q
 
 [shopee.vn]
 match = 13.3%%
@@ -92,7 +92,12 @@ title = Sự thật về công dụng của chiếu điều hòa khiến ngườ
 url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-khien-nguoi-dung-hieu-lam-dt34423
 
 [goni.vn]
-match = 26.7%%
-title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
-url = https://goni.vn/chieu-dieu-hoa-goni/
+match = 10.0%%
+title = Có nên sử dụng chiếu điều hòa cho bé không?
+url = https://goni.vn/co-nen-su-dung-chieu-dieu-hoa-cho-be-khong/
+
+[betiti.com]
+match = -10.0%%
+title = Chiếu Điều Hòa - Betiti - Chuyên Đồ Sơ Sinh, Trọn Bộ ...
+url = https://betiti.com/san-pham/chieu-dieu-hoa/
 
