--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-07-24 17:49:23
+lastsearch = 2024-07-24 23:20:31
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Chia sẻ, kinh nghiệm sử dụng chiếu trúc, chiếu tre bền đ
 url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 
 [demxanh.com]
-match = -30.4%%
-title = Mách bạn địa chỉ mua chiếu trúc tốt giá rẻ
-url = https://demxanh.com/mach-ban-dia-chi-mua-chieu-truc-tot-gia-re.html
+match = -87.0%%
+title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
+url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
 
 [www.dienmayxanh.com]
 match = -73.9%%
@@ -430,4 +430,9 @@ url = https://baolaichau.vn/xã-hội/cứu-sống-người-đàn-ông-bị-rơi
 match = 47.4%%
 title = Chiếu trúc Cao Bằng
 url = http://chieutruccaobang.com.vn/
+
+[happynest.vn]
+match = -34.8%%
+title = 8 loại mái hiên nhà phổ biến nhất hiện nay
+url = https://happynest.vn/chuyen-nha/100076648/8-loai-mai-hien-nha-pho-bien-nhat-hien-nay
 
