--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-24 22:32:44
+lastsearch = 2024-07-24 23:16:46
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
+match = 0.0%%
+title = 
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -154,7 +154,7 @@ url = https://boardofwatersupply.com/appGgWZQDXVkf
 [steamcommunity.com]
 match = -53.3%%
 title = Cộng đồng Steam :: Dawn of Man
-url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=10
+url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=196
 
 [register.fca.org.uk]
 match = -6.7%%
