--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-24 18:16:49
+lastsearch = 2024-07-24 23:15:38
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -27,9 +27,9 @@ title = Nam Joo-hyuk
 url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
-match = -140.0%%
-title = Korean Embassy in South Africa 주남아공한국대사관
-url = https://www.facebook.com/KoreanEmbassySouthAfrica/
+match = -160.0%%
+title = CDT Jake Sorrels successfully defended his senior thesis “ ...
+url = https://www.facebook.com/photo.php?fbid=2759708960745737&id=130999010283425&set=a.135510956498897&locale=hu_HU
 
 [www.vietnam.vn]
 match = -155.0%%
@@ -37,9 +37,9 @@ title = US strategic bombers conduct drills with Japan and South ...
 url = https://www.vietnam.vn/en/may-bay-nem-bom-chien-luoc-my-tap-tran-voi-nhat-han-o-ban-dao-trieu-tien/
 
 [www.youtube.com]
-match = -90.0%%
-title = A REPRESENTAÇÃO DOS 7 PECADOS CAPITAIS NOS ...
-url = https://www.youtube.com/watch?v=L7h-gqJa92s
+match = -150.0%%
+title = Our Game (ft. Kim Jung Gi) | Anniversary 2019 Mural Time ...
+url = https://www.youtube.com/watch?v=3owI8KRRwaI
 
 [som.yale.edu]
 match = -110.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -110.0%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -160.0%%
+title = (Olympics) Confusion reigns after chaotic finish in short ...
+url = https://en.yna.co.kr/view/AEN20180213013100315
 
 [www.vlr.gg]
 match = 5.6%%
