CI images update

--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-24 20:35:28
+lastsearch = 2024-07-24 23:38:10
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -325,4 +325,9 @@ url = https://www.beyondblue.org.au/
 match = -28.6%%
 title = The European Green Deal
 url = https://commission.europa.eu/strategy-and-policy/priorities-2019-2024/european-green-deal_en
+
+[www.labattusa.com]
+match = -14.3%%
+title = Labatt USA: Welcome
+url = https://www.labattusa.com/
 
