--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-24 22:48:22
+lastsearch = 2024-07-24 23:38:00
 
 [tuananh.vn]
-match = 12.0%%
-title = Đệm bông Adaptive Fiber 3M
-url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
+match = 22.2%%
+title = Đệm Korea Gấm Plus
+url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
 match = -48.0%%
@@ -32,9 +32,9 @@ title = Đệm bông ép Tuấn Anh Korea gấm Plus - chăn ga gối
 url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [sieuthidemonline.vn]
-match = -24.0%%
-title = Giá khuyến mại đệm bông ép Korea Kaki cao cấp
-url = https://sieuthidemonline.vn/dem-bong-ep-korea-kaki/
+match = -60.0%%
+title = Đệm Tuấn Anh - thương hiệu đệm hàng đầu tại Việt Nam!
+url = https://sieuthidemonline.vn/dem-tuan-anh/
 
 [suongtuyet.com]
 match = 16.0%%
