--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-24 22:34:45
+lastsearch = 2024-07-24 23:37:18
 
 [everon.online]
 match = 50.0%%
@@ -14,7 +14,7 @@ url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-
 [everonvn.com.vn]
 match = -17.6%%
 title = Bộ chăn ga chun, gối Everon SR-03 chất liệu 100%% cotton ...
-url = https://everonvn.com.vn/everon/2241/bo-chan-ga-chun-everon-sr-03?srsltid=AfmBOopClMXlswONH-0jv3TfJcZOI0WkEQCt2Gw02DWswsQ56ugTUOeR
+url = https://everonvn.com.vn/everon/2241/bo-chan-ga-chun-everon-sr-03
 
 [tiki.vn]
 match = 29.4%%
