--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-07-24 20:35:19
+lastsearch = 2024-07-24 23:35:40
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -37,9 +37,9 @@ title = Ống Kính Pentax Thế giới máy ảnh số
 url = https://www.thegioimayanhso.vn/ong-kinh-pentax
 
 [www.vnphoto.net]
-match = -32.1%%
-title = Ăn chơi phải sướng [Archive] - VNPHOTO.net Forum
-url = http://www.vnphoto.net/forums/archive/index.php/t-71398.html
+match = -3.6%%
+title = Nên Chọn Pentax K7 Hay K5. [Archive]
+url = http://www.vnphoto.net/forums/archive/index.php/t-179152.html
 
 [nspp.mofa.gov.tw]
 match = -46.4%%
@@ -290,4 +290,9 @@ url = https://voz.party/d/166359-tai-sao-cac-bac-lai-me-bong-da/35
 match = -42.9%%
 title = Top 20+ Màu Tóc Nhuộm Sáng Da Không Cần Tẩy Cực Hot
 url = https://mogi.vn/news/mau-toc-nhuom-sang-da-210891/
+
+[benblan.fr]
+match = 15.0%%
+title = Caác Hậu Môn Về Bệnh
+url = https://benblan.fr/6587509-hậu-về-bệnh-caác-môn.html
 
