--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-24 12:47:08
+lastsearch = 2024-07-24 23:41:41
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -146.7%%
-title = BRGMart - ☀️𝗛𝗘̣̂ 𝗧𝗛𝗢̂́𝗡𝗚 𝗕𝗔́𝗡 𝗟𝗘̉ 𝗕𝗥𝗚 𝗥𝗘𝗧𝗔𝗜𝗟 - ...
-url = https://www.facebook.com/photo.php?fbid=2221498034823753&id=1515183965455167&set=a.1547878702185693
+match = -220.0%%
+title = Dookki Vietnam - 🍴Buffet Tokbokki siêu HOT khu D2 Bình...
+url = https://www.facebook.com/DookkiVietnam/posts/buffet-tokbokki-siêu-hot-khu-d2-bình-thạnh-dookki-buffet-139-141-nguyễn-gia-trí-/2301597160110405/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -382,8 +382,8 @@ title = Hướng dẫn cách cúng rước ông bà 30 Tết chuẩn, chi tiết
 url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-cach-cung-ruoc-ong-ba-30-tet-chuan-chi-tiet
 
 [vietnamese.alibaba.com]
-match = -213.3%%
-title = Bộ Câu Lạc Bộ Golf Dành Cho Phụ Nữ Với Chiều Dài Tùy ...
+match = -226.7%%
+title = Bộ Câu Lạc Bộ Golf Dành Cho Phụ Nữ Với Chiều Dài Tùy Chỉnh
 url = https://vietnamese.alibaba.com/product-detail/Golf-Club-Set-for-Lady-with-1600364285763.html
 
 [www.highlandscoffee.com.vn]
