--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-24 15:23:11
+lastsearch = 2024-07-24 23:37:51
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -12,9 +12,9 @@ title = Thảm giường nỉ 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -27.3%%
-title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
 match = -68.2%%
@@ -62,9 +62,9 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [jysk.vn]
-match = -54.5%%
-title = Bed frame VEDDE 180x200 wild oak - JYSK.vn
-url = https://jysk.vn/en-US/bed-frame-vedde-180x200-wild-oak
+match = -77.3%%
+title = Mattress 160x200 GOLD F40 DREAMZONE - JYSK.vn
+url = https://jysk.vn/en-US/mattress-180x200-gold-f40-dreamzone-1
 
 [decosy.com]
 match = -166.7%%
@@ -82,9 +82,9 @@ title = Giường bọc nệm hoàng gia GK01
 url = https://nemgiakho.com/giuong-boc-nem-hoang-gia-gk01.html
 
 [dovihome.vn]
-match = -86.4%%
-title = Giường ngủ Decor kết hợp mây mắt cáo từ gỗ ...
-url = https://dovihome.vn/giuong-ma-dv6-giuong-ngu-decor-ket-hop-may-mat-cao-tu-go-thong-nhap-khau
+match = -77.3%%
+title = Giường ngủ Decor có tựa đầu bọc nệm Sofa ...
+url = https://dovihome.vn/giuong-bay-ma-m30-giuong-ngu-decor-co-tua-dau-boc-nem-sofa-phong-cach-toi-gian
 
 [decoviet.vn]
 match = 22.2%%
@@ -125,4 +125,9 @@ url = https://muanhanhvatlieuxaydung.ritavo.com/products/bo-drap-giuong-30
 match = -9.1%%
 title = Thảm trải sàn chính hãng, giá tốt
 url = https://flexhouse.vn/tham-lot-san
+
+[www.sieuthinem.vn]
+match = -40.9%%
+title = NỆM CAO SU 5 ZONE ALOELUX – KIM CƯƠNG
+url = https://www.sieuthinem.vn/nem-cao-su-5-zone-aloe-kim-cuong.html
 
