--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-24 22:36:49
+lastsearch = 2024-07-24 23:34:23
 
 [xoptraisan.info]
 match = 17.6%%
@@ -32,9 +32,9 @@ title = Thảm nỉ ghép trản sàn nhà Tường Lâm cao cấp - Lombomshop!
 url = https://lombom.com/tham-ni-ghep-san-nha/
 
 [trieuchau.com]
-match = -129.4%%
-title = Thảm Trải Lót Sàn, Sàn Nhựa Giả Gỗ, Thảm Nhựa TPHCM
-url = https://trieuchau.com/
+match = -64.7%%
+title = 40*40*15 tấm - Thảm xốp mặt nỉ Âu Lạc
+url = https://trieuchau.com/vi-vn/1057/28070/Tham-Xop-40x40cm/404015-tam--Tham-xop-mat-ni-Au-Lac
 
 [www.facebook.com]
 match = 0.0%%
