CI images update

--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-24 22:33:42
+lastsearch = 2024-07-24 23:52:08
 
 [silverwow.net]
 match = -255.6%%
@@ -132,9 +132,9 @@ title =
 url = https://m.indiamart.com/proddetail/mild-steel-c-channel-21330745648.html
 
 [www.amazon.com]
-match = -366.7%%
-title = Maruchan Ramen Chicken, Instant Ramen Noodles ...
-url = https://www.amazon.com/Maruchan-Ramen-Chicken-3-0-Pack/dp/B07222R3Y5
+match = -344.4%%
+title = Tees Factory KG-5542671HK Koguma-chan Mini ...
+url = https://www.amazon.com/Factory-KG-5542671HK-Koguma-chan-Character-Basket/dp/B0BW2HGFKD
 
 [www.robe.cz]
 match = -366.7%%
@@ -187,9 +187,9 @@ title =
 url = https://brainly.in/question/32900234
 
 [www.instagram.com]
-match = -511.1%%
-title = Cindy Chan | I will say that losing 2-3kg comes down to... 🔺 ...
-url = https://www.instagram.com/cindy.chan.sy/reel/C8uW0bZSfN_/
+match = -466.7%%
+title = alldan chan | W4 Squat : 235 KG X 3 ( PR +15 ... - Instagram
+url = https://www.instagram.com/p/C8yhA6PyNsK/
 
 [sdzssteel.en.made-in-china.com]
 match = 0.0%%
@@ -347,8 +347,8 @@ title = Home | Powerful ideas for a healthier world
 url = https://www.hsph.harvard.edu/
 
 [profiles.ucsf.edu]
-match = -122.2%%
-title = Jason Chan | UCSF Profiles
+match = -11.1%%
+title = Jason Chan, MD
 url = https://profiles.ucsf.edu/jason.w.chan
 
 [shopee.sg]
