--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-24 23:43:08
+lastsearch = 2024-07-24 23:51:10
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -32,9 +32,9 @@ title = Mechanosensitive Channel PIEZO1 Senses Shear Force to ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 
 [books.google.com]
-match = -200.0%%
-title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0tbs62Jm&sig=ACfU3U25ItFFO3jV3DjV6j5JKMBmCKeKZA&hl=en&sa=X&ved=2ahUKEwi0m-rIj8CHAxXfHDQIHRZXARwQ6AF6BAgYEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVLK3u49&sig=ACfU3U2czAso7pHlVtAT1wRzhU2-eGvz8g&hl=en&sa=X&ved=2ahUKEwjH2ciukcCHAxXtmokEHZugAZoQ6AF6BAgbEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -129.4%%
-title = Does KQ Entertainment treat their idols well?
-url = https://www.quora.com/Does-KQ-Entertainment-treat-their-idols-well
+match = -176.5%%
+title = How much do you know about each member of the Korean ...
+url = https://www.quora.com/How-much-do-you-know-about-each-member-of-the-Korean-band-Stray-Kids-What-are-their-interests-hobbies-outside-of-music-Are-they-close-friends-in-real-life-as-well
 
 [msaniimusicgroup.org]
 match = 0.0%%
