--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-24 22:36:40
+lastsearch = 2024-07-24 23:44:52
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -47,9 +47,9 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.facebook.com]
-match = -23.8%%
-title = Raohe Ẩm Thực Đài | Ho Chi Minh City
-url = https://www.facebook.com/RaoheAmThucDai/
+match = -138.1%%
+title = Bản tin tiếng Việt PTS 公視越南語新聞 | Taipei
+url = https://www.facebook.com/ptsvietnamesenews/?locale=vi_VN
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -82,9 +82,9 @@ title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VIS
 url = https://visana.vn/visa-dai-loan/
 
 [www.tiktok.com]
-match = -104.8%%
-title = Phim MAI 14/2 chiếu tại Đài Loan m.n có Địa Chỉ Rạp chưa ...
-url = https://www.tiktok.com/@anhvuphunxamtaiwan/video/7349143704650681606?lang=en
+match = -19.0%%
+title = Cách Xem Lịch Chiếu Film Tại Taiwan
+url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
 
 [www.travel.taipei]
 match = 19.0%%
