--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-24 19:27:47
+lastsearch = 2024-07-24 23:51:46
 
 [zhangbrickshop.com]
 match = -133.3
@@ -92,8 +92,8 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Chiếu lác D2 10 - Điệp Xuân
+match = 33.3%%
+title = Điệp Xuân Chiếu lác D2 10
 url = https://www.diepxuan.com/chieu-lac-d2-10.html
 
 [visana.vn]
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -206.7%%
-title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
-url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
+match = -186.7%%
+title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
+url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
 
 [uspharma.vn]
 match = -20.0%%
