--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-07-24 19:28:54
+lastsearch = 2024-07-24 23:47:59
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/GA-CHỐNG-THẤM-CAO-CẤP-2m-x-2m2-i.236450460.2102376
 [www.lazada.vn]
 match = -115.8%%
 title = Ga Chong Thấm 2m Giá Tốt T06/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-chong-tham-2m/
+url = https://www.lazada.vn/tag/ga-chong-tham-2m/?srsltid=AfmBOoqgUti_swMzP8rB09W6tPeS5rOSSFFd2gy0Bt02Q54u2o0GOkYV
 
 [demgiare.net]
 match = 5.3%%
