--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-07-24 21:48:01
+lastsearch = 2024-07-24 23:51:34
 
 [demdreamland.vn]
 match = 25.6%%
@@ -12,9 +12,9 @@ title = Đệm cao su nhập khẩu Dreamland Natural Latex
 url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
 
 [demxanh.com]
-match = 18.6%%
-title = Đệm cao su Kim Cương xuất khẩu PRINCESS GOLD áo gấm
-url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-gold.html
+match = 16.3%%
+title = Đệm cao su Kim Cương xuất khẩu PRINCESS MASSAGE ...
+url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-massage.html
 
 [www.diepxuan.com]
 match = -277.8%%
@@ -62,9 +62,9 @@ title = [Cập nhật] Bảng giá đệm Dreamland mới nhất 2020
 url = https://changagoidemsonghong.online/cap-nhat-bang-gia-dem-dreamland-moi-nhat-2020.html
 
 [www.dreamland.vn]
-match = 0.0%%
-title = Đệm lò xo xuất khẩu - Chăn ga gối đệm cao cấp Dreamland
-url = http://www.dreamland.vn/Dem-lo-xo-xuat-khau-i4157.html
+match = 3.1%%
+title = Đệm cao su 100%% nhập khẩu - 18cm
+url = http://www.dreamland.vn/Dem-cao-su-100-nhap-khau-i4160.html
 
 [www.facebook.com]
 match = -30.0%%
