--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-07-24 19:26:44
+lastsearch = 2024-07-24 23:45:57
 
 [thefelix.vn]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Nệm cao su thiên nhiên Felix - Nệm Khang Anh
 url = https://nemkhanganh.com/san-pham/nem-cao-su-thien-nhien-felix/
 
 [www.facebook.com]
-match = 31.6%%
-title = Felix - Nệm cao su thiên nhiên | Ho Chi Minh City
-url = https://www.facebook.com/thefelix.vn/
+match = 13.3%%
+title = Felix - Nệm cao su thiên nhiên
+url = https://www.facebook.com/photo.php?fbid=737062915251530&id=100068434838834&set=a.413784520912706&locale=vi_VN
 
 [shopee.vn]
 match = 36.8%%
@@ -69,7 +69,7 @@ url = https://ninhouse.vn/collections/nem-cao-su-thien-nhien
 [www.lazada.vn]
 match = 13.2%%
 title = Nệm cao su 100%% thiên nhiên - Felix Comfort - độ cứng ...
-url = https://www.lazada.vn/products/nem-cao-su-100-thien-nhien-felix-comfort-do-cung-tieu-chuan-cap-do-1-nang-do-co-the-thoang-khi-toi-uu-i2295048242.html?srsltid=AfmBOoox2EmNc0KaH3UUpbrNflX1jlxp0iJyGn1bsuEDT7xEtHLLuu3I
+url = https://www.lazada.vn/products/nem-cao-su-100-thien-nhien-felix-comfort-do-cung-tieu-chuan-cap-do-1-nang-do-co-the-thoang-khi-toi-uu-i2295048242.html
 
 [nemcaosuthangloi.vn]
 match = 18.2%%
