--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-24 23:16:57
+lastsearch = 2024-07-24 23:47:04
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
+match = 27.3%%
+title = Thảm giường Bode 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
 match = -22.7%%
@@ -42,8 +42,8 @@ title = Thảm chân giường
 url = https://www.thamvintage.vn/collections/tham-chan-giuong
 
 [cafeland.vn]
-match = -100.0%%
-title = 5 loại thảm trải giường hot nhất hiện nay 2022 - CafeLand.Vn
+match = -72.7%%
+title = 5 loại thảm trải giường hot nhất hiện nay - Cafeland
 url = https://cafeland.vn/xu-huong/5-loai-tham-trai-giuong-hot-nhat-hien-nay-112172.html
 
 [noithatviva.vn]
