--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-24 20:26:38
+lastsearch = 2024-07-24 23:53:50
 
 [noithathomy.com]
 match = -42.9%%
@@ -17,9 +17,9 @@ title = Tặng Thảm Lau Chân - 100 Mẫu Thảm 2m x 3m Thảm Nỉ ...
 url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.22156385.4432151796
 
 [www.lazada.vn]
-match = -42.9%%
-title = Thảm Trải Sàn Nhà 2m X 3m Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/tham-trai-san-nha-2m-x-3m/
+match = -33.3%%
+title = Thảm trải sàn BALI mẫu hoa hồng phấn 2M X 3M
+url = https://www.lazada.vn/products/tham-trai-san-bali-mau-hoa-hong-phan-2m-x-3m-i369416236.html
 
 [tiki.vn]
 match = -9.5%%
