--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-24 20:00:55
+lastsearch = 2024-07-25 00:17:35
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -200.0%%
-title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
-url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
+match = -18.8%%
+title = game chill chill thư giãn
+url = https://www.youtube.com/watch?v=rcCAVOIfgnU
 
 [saigontourist.edu.vn]
 match = -162.5%%
