--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-24 20:45:13
+lastsearch = 2024-07-25 00:15:40
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -123.8%%
 title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKBw5Euoj&sig=ACfU3U3NP-TUSR5kBeio8TiHRfn8c3E21w&hl=en&sa=X&ved=2ahUKEwj6ttzm57-HAxWJM9AFHRFfAI0Q6AF6BAg0EAM
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKBw7xqrh&sig=ACfU3U1QyOUZTmVHOrBUnhtQWkZo4Fbkig&hl=en&sa=X&ved=2ahUKEwjT9vrrlsCHAxX5OFkFHfPiAjcQ6AF6BAgdEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -100.0%%
-title = Nem Dubrovnik unveils its 10 Keynote Speakers for 10 ...
-url = https://www.formatbiz.it/dettNews.aspx?id=9944
+match = -76.2%%
+title = Nem Dubrovnik 2024 confirms a record of partecipants
+url = https://www.formatbiz.it/dettNews.aspx?id=11256
 
 [yro.slashdot.org]
 match = -114.3%%
