--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-24 23:37:51
+lastsearch = 2024-07-25 00:17:46
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 180x200
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html?srsltid=AfmBOoq1CmvSjeVlUuOMZzuFxJu5FoIGKt3UiriAlcbwke2AX6SZOYq6
 
 [demxanh.com]
 match = -22.7%%
 title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOorLZMHN7bpdgZbmXp-mBocxQe8zt5pvYe01MVyPv_MEFDs_hK59
 
 [www.lazada.vn]
 match = -68.2%%
 title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html?srsltid=AfmBOopHg1MrBewA3CiyFrq-XXp5nZ_jHwPVnyOwSNn1DwvoH57XxJpx
 
 [noithatlongthai.com]
 match = -13.6%%
