--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-24 21:12:25
+lastsearch = 2024-07-25 00:19:00
 
 [ninhouse.vn]
 match = -246.2%%
 title = Áo gối | Bao gối đẹp giá rẻ NIN House cao cấp tại Tphcm
-url = https://ninhouse.vn/collections/vo-goi
+url = https://ninhouse.vn/collections/vo-goi?srsltid=AfmBOor58Drd9ggNORF3uAf39nqzcWW3yg1I_BY1cbFMPNXgZIxb5Cyg
 
 [www.lamido.vn]
 match = 46.2%%
@@ -24,7 +24,7 @@ url = https://www.translate.com/vietnamese-english
 [ru9.vn]
 match = -107.7%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOopUPmHrQiwsk7GZawlxLFhVdh7NDVi5oI5TrONqjmiZkKQx6mpv
 
 [www.reddit.com]
 match = -230.8%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -215.4%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOorWHjLjddpZ-RcvvZHO3nvICesWYUC6zTAX_yMC_VAegwzh6JQv
 
 [www.everonvn.vn]
 match = 15.4%%
