CI images update

--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-24 23:51:10
+lastsearch = 2024-07-25 00:33:38
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -176.5%%
-title = Mechanosensitive Channel PIEZO1 Senses Shear Force to ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
+match = -223.5%%
+title = Translational strategies for neuroprotection in ischemic stroke
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3933947/
 
 [books.google.com]
 match = -11.8%%
@@ -240,4 +240,9 @@ url = https://www.bandsintown.com/e/105390513-the-killer-queen-experience-at-cen
 match = -141.2%%
 title = MCSNet: Channel Synergy-Based Human-Exoskeleton ...
 url = https://www.frontiersin.org/journals/neuroscience/articles/10.3389/fnins.2021.704603/full
+
+[www.sweetwater.com]
+match = 0.0%%
+title = 
+url = https://www.sweetwater.com/store/detail/K12--qsc-k12-1000w-12-inch-powered-speaker/reviews
 
