--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-24 21:53:10
+lastsearch = 2024-07-25 01:23:43
 
 [agasound.vn]
 match = 6.7%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 12
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
-match = -206.7%%
-title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
-url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
+match = -146.7%%
+title = bút kèn D212 bút đầu quay dễ thương viết gel
+url = https://shopee.vn/D53-bút-donut-tai-mèo-lúc-lắc-bút-dễ-thương-viết-gel-i.52220670.1799275465
 
 [mngiaquat.longbien.edu.vn]
 match = -213.3%%
