--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-24 22:19:59
+lastsearch = 2024-07-25 01:17:49
 
 [gobearcats.com]
 match = -142.1%%
@@ -545,4 +545,9 @@ url = https://kansas.academia.edu/RajendraSrivastava/CurriculumVitae
 match = -163.2%%
 title = Vanadium Oxide: Phase Diagrams, Structures, Synthesis, and ...
 url = https://pubs.acs.org/doi/10.1021/acs.chemrev.2c00546
+
+[edsource.org]
+match = 0.0%%
+title = 
+url = https://edsource.org/updates/nine-california-high-school-seniors-named-u-s-presidential-scholars
 
