--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-07-25 00:15:52
+lastsearch = 2024-07-25 01:42:29
 
 [www.sendo.vn]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Thảm xốp ghép nỉ Âu Lạc 30*30*18 tấm
 url = http://thamachau.vn/tham-xop-ghep-ni-au-lac-30-30-18-tam
 
 [shopee.vn]
-match = -127.3%%
-title = THẢM TRẢI SÀN NỈ DỆT CAO CẤP 18 TẤM
-url = https://shopee.vn/THẢM-TRẢI-SÀN-NỈ-DỆT-CAO-CẤP-18-TẤM-THẢM-XỐP-GHÉP-MIẾNG-TƯỜNG-LÂM-SANG-TRỌNG-PHÙ-HỢP-VỚI-MỌI-KHÔNG-GIAN-NỘI-THẤT-i.157222824.3315202784
+match = -336.4%%
+title = Thảm xốp trải sàn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm xốp/trải sàn
 
 [thamtretho.com]
 match = -363.6%%
@@ -34,7 +34,7 @@ url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-x
 [www.lazada.vn]
 match = -136.4%%
 title = BỘ 18 MIẾNG THẢM XỐP VÂN GỖ CAO CẤP
-url = https://www.lazada.vn/products/bo-18-mieng-tham-xop-van-go-cao-cap-18-mieng-tham-nhieu-mau-i377144802.html
+url = https://www.lazada.vn/products/bo-18-mieng-tham-xop-van-go-cao-cap-18-mieng-tham-nhieu-mau-i377144802.html?srsltid=AfmBOoqe66RPoS_Jn_9M_CpaLCw1SfNkPWZILGuQy0_XxTCscEtBfBQa
 
 [tayphuthuan.com]
 match = -154.5%%
