--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-07-25 01:24:14
+lastsearch = 2024-07-25 02:24:05
 
 [demxanh.com]
 match = -18.5%%
@@ -62,8 +62,8 @@ title = Chiếu Trúc Đen - Chăn ga gối đệm
 url = https://changagoidemdep.vn/chieu-truc-den.html
 
 [search.daisan.vn]
-match = -29.6%%
-title = Chiếu trúc hạt Thái Bình cao cấp 160x200 tại Hà Nội - DaiSan
+match = -40.7%%
+title = Chiếu trúc hạt Thái Bình cao cấp 160x200 tại Hà Nội - Daisan.vn
 url = https://search.daisan.vn/item/hangtieudung/chieu-truc-hat-thai-binh-cao-cap-160x200-tai-ha-noi-sieuthitrethovn-2497.html
 
 [thegioichieutruc.com]
