--- a/images/ruot-nem-warmdream-160x200x09/config.ini
+++ b/images/ruot-nem-warmdream-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-warmdream-160x200x09.html
 lastopen = 2024-06-11 23:30:20
 
 [search]
-lastsearch = 2024-07-25 02:18:33
+lastsearch = 2024-07-25 02:27:35
 
 [www.diepxuan.com]
 match = 58.6%%
@@ -50,4 +50,14 @@ url = https://www.youtube.com/watch?v=-h7S5zl83po
 match = -37.9%%
 title = Officine Panerai » Lack of a roller bearing...
 url = https://forums.timezone.com/index.php?t=msg&th=2431286&start=0
+
+[warmdreams.us]
+match = -58.6%%
+title = Home Window and Door Replacement Company in Chicago ...
+url = https://warmdreams.us/
+
+[dreamline.com]
+match = -20.7%%
+title = Enigma-X Sliding Shower Door - Dreamline
+url = https://dreamline.com/shower-doors/dreamline-enigma-x-44-to-48-in-fully-frameless-sliding-shower-door_shdr-61607610-07.html
 
