--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-25 01:55:24
+lastsearch = 2024-07-25 02:31:59
 
 [chanrathanhthuy.com]
-match = -3.2%%
-title = Chọn màu sắc chăn ga gối đệm hợp phong thủy vợ chồng
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-vo-chong-1469.html
+match = -6.5%%
+title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
+url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = 63.3%%
-title = Bộ chăn ga gối lụa 6 món L6M18
-url = https://demxanh.com/bo-chan-ga-goi-lua-6-mon-l6m18.html
+match = -16.1%%
+title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
+url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
 
 [songhongonline.vn]
-match = 4.3%%
-title = Bộ sản phẩm SH_BT22 056
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bt22-056
+match = 50.0%%
+title = Bộ chăn ga gối SH_UC23 035
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc23-035
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -54,7 +54,7 @@ url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 [everonvn.com.vn]
 match = -41.9%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOopl7mPoc6oenWiueNza5uf59qP68vTtIvaCGcRqWSXkkn4UilRD
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [lizd.vn]
 match = 0.0%%
