--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-25 00:52:00
+lastsearch = 2024-07-25 02:30:30
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -240.0%%
-title = Cơ sở thứ 6 Celadon Sports & Resort số 2, đường D2 , Sơn ...
-url = https://www.facebook.com/TheDucBangTamPhatTrienChieuCaoVaTheLucChoTreEm/videos/cơ-sở-thứ-6-celadon-sports-resort-số-2-đường-d2-sơn-kỳ-tân-phú-bố-mẹ-có-thể-đưa-/1798013050339107/
+match = -220.0%%
+title = Dookki Vietnam - 🍴Buffet Tokbokki siêu HOT khu D2 Bình...
+url = https://www.facebook.com/DookkiVietnam/posts/buffet-tokbokki-siêu-hot-khu-d2-bình-thạnh-dookki-buffet-139-141-nguyễn-gia-trí-/2301597160110405/
 
 [banhang.shopee.vn]
 match = -66.7%%
