--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-24 22:50:33
+lastsearch = 2024-07-25 02:25:22
 
 [us.misumi-ec.com]
 match = -350.0%%
@@ -295,4 +295,9 @@ url = https://www.yelp.com/biz/pho-ga-an-nam-san-jose
 match = -58.3%%
 title = Warranty Registration
 url = https://www.fwe.com/sales-and-support/warranty
+
+[www.ktalnews.com]
+match = -325.0%%
+title = Court ruling will allow student housing at UC Berkeley's ...
+url = https://www.ktalnews.com/news/u-s-world/ap-a-court-ruling-will-allow-new-student-housing-at-university-of-california-berkeleys-peoples-park/
 
