--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-25 02:10:21
+lastsearch = 2024-07-25 02:24:37
 
 [www.bible.com]
 match = -100.0%%
@@ -17,9 +17,9 @@ title = Exodus 1-40 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -82.4%%
-title = John 20:22 New International Version
-url = https://www.biblegateway.com/passage/?search=John 20:22&version=NIV
+match = -158.8%%
+title = Matthew 20-22 NIV - The Parable of the Workers in the
+url = https://www.biblegateway.com/passage/?search=Matthew 20-22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
