--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-07-25 02:12:09
+lastsearch = 2024-07-25 03:14:44
 
 [shopee.vn]
-match = -43.5%%
-title = Chiếu trúc Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
-url = https://shopee.vn/Chiếu-trúc-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-Lạnh-Mùa-Hè)-i.453113145.9960128744
+match = -666.7%%
+title = 1/4
+url = https://shopee.vn/Chiếu-Trúc-Tre-Cao-Bằng-Xịn-Các-Cỡ-0.8m-0.9m-1m-1.2m-1.4m-1.5m-1.6m-1.8m-2m-i.182611643.17934077095
 
 [www.diepxuan.com]
 match = 26.1%%
@@ -68,13 +68,13 @@ url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu
 
 [www.facebook.com]
 match = 21.7%%
-title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieutruccaobangcbg/
+title = CAO BẰNG HÓNG | Cao Bang
+url = https://www.facebook.com/caobanghong/?locale=vi_VN
 
 [www.youtube.com]
-match = -117.4%%
-title = 2 Ngày 1 Đêm - Mùa 3 - Tập 1 | Trận chiến trong thung lũng ...
-url = https://www.youtube.com/watch?v=7Czd1WUMPxU
+match = -87.0%%
+title = Tổng bí thư Nguyễn Phú Trọng trong mắt người bạn Nga ...
+url = https://www.youtube.com/watch?v=NJVV5Mu6pvU
 
 [khodem.vn]
 match = -56.5%%
