--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-25 01:52:58
+lastsearch = 2024-07-25 03:18:48
 
 [tiki.vn]
 match = -47.6%%
@@ -67,9 +67,9 @@ title = Hứa Quang Hán 'ghi điểm' trong phim Đài Loan có doanh ...
 url = https://thanhnien.vn/hua-quang-han-ghi-diem-trong-phim-dai-loan-co-doanh-thu-chieu-som-cao-nhat-1852404081738149.htm
 
 [www.youtube.com]
-match = -104.8%%
-title = VỪA GẶP ĐÃ YÊU TẬP 18 | Phim Bộ Tình Cảm Trung Quốc ...
-url = https://www.youtube.com/watch?v=phzQ4MxJ1LQ
+match = -128.6%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 18 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=-5kfc6oUOmU
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -87,9 +87,9 @@ title = Đài Loan (Trung Quốc) tiếp tục tìm kiếm 18 người mất tí
 url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich-sau-dong-dat-post803249.html
 
 [www.diepxuan.com]
-match = 19.0%%
-title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
+match = 14.3%%
+title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 
 [znews.vn]
 match = -104.8%%
