--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-24 16:20:45
+lastsearch = 2024-07-25 03:21:10
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -62,9 +62,9 @@ title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
 url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
-match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+match = -125.0%%
+title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
+url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
 match = -225.0%%
@@ -282,9 +282,9 @@ title = Ngỡ hết thời, ai dè chiếu Việt... xuất ngoại, ẵm về t
 url = https://tuoitre.vn/ngo-het-thoi-ai-de-chieu-viet-xuat-ngoai-am-ve-trieu-do-20190503214000009.htm
 
 [xaydungchinhsach.chinhphu.vn]
-match = -131.2%%
-title = Phát hiện thêm ca dương tính với bệnh bạch hầu
-url = https://xaydungchinhsach.chinhphu.vn/phat-hien-them-ca-duong-tinh-voi-benh-bach-hau-11924071111380818.htm
+match = -206.2%%
+title = Tân sinh viên cảnh giác những chiêu trò lừa đảo dễ gặp phải
+url = https://xaydungchinhsach.chinhphu.vn/tan-sinh-vien-canh-giac-nhung-chieu-tro-lua-dao-de-gap-phai-119240724151357032.htm
 
 [canbangdongclc.com]
 match = -68.8%%
