--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-25 01:38:20
+lastsearch = 2024-07-25 03:13:07
 
 [everonvn.com.vn]
 match = -12.5%%
 title = Tấm trải chần Everon chất liệu 100%% cotton
-url = https://everonvn.com.vn/everon/2166/tam-trai-everon?srsltid=AfmBOorn7c_FexFXLmkCzjMC1O52uSTTQidhEuRpS-j461J9psjUNY1O
+url = https://everonvn.com.vn/everon/2166/tam-trai-everon
 
 [everonthaiha.com]
 match = 35.3%%
@@ -29,7 +29,7 @@ url = https://everon.online/collections/topper-tam-tang-tien-nghi
 [www.lazada.vn]
 match = -66.7%%
 title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tam-trai-everon/?srsltid=AfmBOoooaHP180y7ImA9MN3-DxU3pBVaLklsRqQ1ok8oXX5oRVR80X3U
+url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [www.everonvn.vn]
 match = -20.8%%
@@ -94,7 +94,7 @@ url = https://khonemtonghop.com/topper-nem-everon/
 [aeoneshop.com]
 match = -33.3%%
 title = Mua Everon Tấm Topper Lite 180x200cm ELM203-1
-url = https://aeoneshop.com/product/10675/tam-topper-lite-180x200cm-elm203-1?srsltid=AfmBOorp0kS-JXjwVT8QpDCcboDDIL9igATwRR9lW_I76X8Rkp7SBdHm
+url = https://aeoneshop.com/product/10675/tam-topper-lite-180x200cm-elm203-1
 
 [dailynem.vn]
 match = 40.0%%
