--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-25 01:44:58
+lastsearch = 2024-07-25 03:48:37
 
 [scholar.google.com]
 match = -43.8%%
@@ -17,8 +17,8 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.thegioididong.com]
-match = 0.0%%
-title = 
+match = -231.2%%
+title = 2 cách đo size vòng tay, lắc tay chính xác đơn giản nhất tại ...
 url = https://www.thegioididong.com/hoi-dap/2-cach-do-size-vong-tay-lac-tay-chinh-xac-don-gian-nhat-1401980
 
 [dangcongsan.vn]
