--- a/images/nem-everon-180x200x9/config.ini
+++ b/images/nem-everon-180x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x9.html
 lastopen = 2024-06-06 17:09:32
 
 [search]
-lastsearch = 2024-07-25 02:31:48
+lastsearch = 2024-07-25 03:52:39
 
 [www.everonvn.vn]
 match = -75.0%%
@@ -19,7 +19,7 @@ url = https://everon.vip/nem-everon-ceramic
 [everonvn.com.vn]
 match = 20.0%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOopNEQaIylfiXN-cwGydMPaE-IPz1UITtJ0fwmwo88YFtAFG4j4H
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [www.changagoidemeveron.vn]
 match = -105.0%%
@@ -54,7 +54,7 @@ url = https://nemgiakho.com/cua-hang-nem-everon-180x200x10-gia-re-chinh-hang.htm
 [www.lazada.vn]
 match = -90.0%%
 title = [Trả góp 0%%] Nệm bông ép gấp 3 Everon Ceramic ...
-url = https://www.lazada.vn/products/tra-gop-0-nem-bong-ep-gap-3-everon-ceramic-180x200x9cm-bao-hanh-5-nam-i100711236.html?srsltid=AfmBOoqYjS-gduLFyTOUQuW_Hc5_akEQMHcHxz0vADSKQWdYNjy--17e
+url = https://www.lazada.vn/products/tra-gop-0-nem-bong-ep-gap-3-everon-ceramic-180x200x9cm-bao-hanh-5-nam-i100711236.html
 
 [nemeveron.com.vn]
 match = -165.0%%
