--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-25 03:36:34
+lastsearch = 2024-07-25 03:45:51
 
 [www.diepxuan.com]
 match = 50.0%%
 title = Điệp Xuân Thảm giường nỉ 180x200
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html?srsltid=AfmBOooa6Nk7WHy9fO4r9PuX5n1QKNA3zTvM-N3jY6H-6zEkI40h1cD6
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOopGZa4LuwCo-M5Mc_jX6fsYSpHg4EbxfSTY0RxyNr5CpvgnhakN
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [www.lazada.vn]
 match = -68.2%%
 title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html?srsltid=AfmBOoq_riayhmvrhtrclPd8I-zmsrZMpHzYrd2Ezf936mINUQsn6cj0
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [noithatlongthai.com]
 match = -13.6%%
@@ -62,9 +62,9 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [jysk.vn]
-match = -77.3%%
-title = Mattress 160x200 GOLD F40 DREAMZONE - JYSK.vn
-url = https://jysk.vn/en-US/mattress-180x200-gold-f40-dreamzone-1
+match = -54.5%%
+title = Bed frame VEDDE 180x200 wild oak - JYSK.vn
+url = https://jysk.vn/en-US/bed-frame-vedde-180x200-wild-oak
 
 [decosy.com]
 match = -166.7%%
