CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-25 01:46:03
+lastsearch = 2024-07-25 04:18:01
 
 [www.tiktok.com]
 match = -35.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -158.8%%
-title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdmnga4jU&sig=ACfU3U3YAin7VlFhSujO8Jj93oJ1OBcVEQ&hl=en&sa=X&ved=2ahUKEwjN1uWFq8CHAxXsEzQIHZCRCw8Q6AF6BAg1EAM
+match = -217.6%%
+title = Department of State News Letter - Page 50 - Google Books Result
+url = https://books.google.com/books?id=D4ZNAQAAMAAJ&pg=RA2-PA50&lpg=RA2-PA50&dq=man+in+hoa+dep+16&source=bl&ots=W-IHZJIrR2&sig=ACfU3U3_bjRY1oxe2dQZXNjxl-Yg3RHeIg&hl=en&sa=X&ved=2ahUKEwiu5KSBzcCHAxVaEFkFHQtHA18Q6AF6BAggEAM
 
 [tax.vermont.gov]
 match = -29.4%%
