--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-07-25 01:54:33
+lastsearch = 2024-07-25 04:21:05
 
 [www.tui.co.uk]
 match = -153.3%%
@@ -72,9 +72,9 @@ title = First TUI passenger flight from Birmingham to Singapore ...
 url = https://www.shropshirestar.com/news/business/2023/12/14/first-tui-passenger-flight-to-singapore-takes-off-from-birmingham/
 
 [www.flightaware.com]
-match = -60.0%%
-title = Live TUI Airways Flight Status
-url = https://www.flightaware.com/live/fleet/TOM
+match = -200.0%%
+title = BY58 (TOM58) TUI Airways Flight Tracking and History ...
+url = https://www.flightaware.com/live/flight/TOM58/history/20240214/1945Z/EGKK/WSSS
 
 [www.teddyblake.com]
 match = -260.0%%
