--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-24 22:29:43
+lastsearch = 2024-07-25 04:30:17
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -75.0%%
-title = Riviu.vn | Hoàng hôn trước cơn bão
-url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1463581180972280/
+match = -175.0%%
+title = YÊU BẾP✅ (Esheep Kitchen family) | |||TUYỆT CHIÊU ...
+url = https://m.facebook.com/groups/groupyeubep/permalink/1362293600821458/
 
 [www.sjcallahabad.org]
 match = -212.5%%
