--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-24 23:38:00
+lastsearch = 2024-07-25 04:32:54
 
 [tuananh.vn]
 match = 22.2%%
@@ -32,9 +32,9 @@ title = Đệm bông ép Tuấn Anh Korea gấm Plus - chăn ga gối
 url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [sieuthidemonline.vn]
-match = -60.0%%
-title = Đệm Tuấn Anh - thương hiệu đệm hàng đầu tại Việt Nam!
-url = https://sieuthidemonline.vn/dem-tuan-anh/
+match = -24.0%%
+title = Giá khuyến mại đệm bông ép Korea Kaki cao cấp
+url = https://sieuthidemonline.vn/dem-bong-ep-korea-kaki/
 
 [suongtuyet.com]
 match = 16.0%%
