--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-25 03:13:29
+lastsearch = 2024-07-25 04:27:35
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -11.8%%
-title = Pieter Dorrestein
-url = https://profiles.ucsd.edu/pieter.dorrestein
+match = -5.0%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -80.0%%
-title = Matthew Cooperberg, MD, MPH - UCSF Profiles
-url = https://profiles.ucsf.edu/matthew.cooperberg
+match = 0.0%%
+title = Jennifer Puck, MD
+url = https://profiles.ucsf.edu/jennifer.puck
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
