--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-25 04:19:40
+lastsearch = 2024-07-25 04:51:56
 
 [demxanh.com]
 match = 26.3%%
@@ -47,9 +47,9 @@ title = Secured Home of nguyendang.com.vn
 url = https://nguyendang.com.vn/
 
 [www.vinmec.com]
-match = -91.3%%
-title = Chẩn đoán trước sinh: Chọc ối được thực hiện vào thời ...
-url = https://www.vinmec.com/vie/bai-viet/chan-doan-truoc-sinh-choc-oi-duoc-thuc-hien-vao-thoi-diem-nao-thi-tot-vi/
+match = -65.2%%
+title = Siêu âm hình thái học là gì? Ý nghĩa và kết quả
+url = https://www.vinmec.com/vie/bai-viet/sieu-am-hinh-thai-hoc-la-gi-y-nghia-va-ket-qua-vi/
 
 [saigontourist.edu.vn]
 match = -26.1%%
