--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-25 04:19:29
+lastsearch = 2024-07-25 04:45:35
 
 [shopee.vn]
 match = 25.0%%
@@ -84,7 +84,7 @@ url = https://baomoi.com/barca-muon-chieu-mo-may-quet-n-golo-kante-c49701372.epi
 [nhathuoclongchau.com.vn]
 match = -200.0%%
 title = Cách tăng chiều cao ở tuổi 12 đơn giản, dễ dàng ngay tại ...
-url = https://nhathuoclongchau.com.vn/bai-viet/cach-tang-chieu-cao-o-tuoi-12-don-gian-de-dang-ngay-tai-nha.html
+url = https://nhathuoclongchau.com.vn/bai-viet/cach-tang-chieu-cao-o-tuoi-12-don-gian-de-dang-ngay-tai-nha.html?srsltid=AfmBOop8BHQW55_hWzCYzSFAek4wla6hz6XzVpbj6bGWcakuBVPwOeBI
 
 [vietstock.vn]
 match = -231.2%%
