--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-07-25 04:30:37
+lastsearch = 2024-07-25 04:44:36
 
 [demxanh.com]
 match = -18.5%%
@@ -12,9 +12,9 @@ title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
 url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 
 [demre.com.vn]
-match = 70.4%%
-title = chiếu trúc hạt đen-trắng 160x200
-url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-3
+match = 66.7%%
+title = chiếu trúc hạt đen- trắng 160x200
+url = https://demre.com.vn/chieu-truc-hat-den-trang-160x200-2
 
 [sieuthitretho.vn]
 match = 3.7%%
@@ -47,9 +47,9 @@ title = Điệp Xuân Chiếu trúc Thái đen 160x200
 url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 
 [shopee.vn]
-match = -48.1%%
-title = Chiếu Tre Việt Phổ Mến Thái Bình 100%% made in Việt Nam ...
-url = https://shopee.vn/Chiếu-Tre-Việt-Phổ-Mến-Thái-Bình-100-made-in-Việt-Nam-đan-thủ-công-chắc-chắn-i.334752746.9933777878
+match = -18.5%%
+title = Chiếu tre gấp vân gỗ Thái Lan 200x220| 180x200| 160x200
+url = https://shopee.vn/Chiếu-tre-gấp-vân-gỗ-Thái-Lan-200x220-180x200-160x200-i.334752746.7193995503
 
 [tiki.vn]
 match = -7.4%%
@@ -62,8 +62,8 @@ title = Chiếu Trúc Đen - Chăn ga gối đệm
 url = https://changagoidemdep.vn/chieu-truc-den.html
 
 [search.daisan.vn]
-match = -40.7%%
-title = Chiếu trúc hạt Thái Bình cao cấp 160x200 tại Hà Nội - Daisan.vn
+match = -29.6%%
+title = Chiếu trúc hạt Thái Bình cao cấp 160x200 tại Hà Nội - DaiSan
 url = https://search.daisan.vn/item/hangtieudung/chieu-truc-hat-thai-binh-cao-cap-160x200-tai-ha-noi-sieuthitrethovn-2497.html
 
 [thegioichieutruc.com]
