--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-25 04:18:01
+lastsearch = 2024-07-25 04:49:01
 
 [www.tiktok.com]
 match = -35.3%%
@@ -17,9 +17,9 @@ title = The Bank of N.Y. Mellon v. Nev. Ass'n Serv.
 url = https://casetext.com/case/the-bank-of-ny-mellon-v-nev-assn-serv
 
 [www.reddit.com]
-match = -223.5%%
-title = HOA tried to punish us - Told us to "Stop them if we can" - ...
-url = https://www.reddit.com/r/MaliciousCompliance/comments/11n6mmx/hoa_tried_to_punish_us_told_us_to_stop_them_if_we/
+match = -141.2%%
+title = The HOA hates this man. : r/suspiciouslyspecific
+url = https://www.reddit.com/r/suspiciouslyspecific/comments/rn50gb/the_hoa_hates_this_man/
 
 [music.apple.com]
 match = -194.1%%
@@ -535,4 +535,9 @@ url = https://vnexpress.net/sac-voc-nguoi-dep-dong-phim-kinh-di-ve-tam-cam-47706
 match = -5.9%%
 title = Nevada Hoa Fraud - Talent
 url = https://praktijk-talent.nl/tycq/nevada-hoa-fraud
+
+[kuschkedental.co.za]
+match = -188.2%%
+title = WHEN CHRISTINE purchased her van and 20 acres of land in ...
+url = https://kuschkedental.co.za/78878773-anh-gai-xinh-khoe-lon.html
 
