--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-07-25 04:32:00
+lastsearch = 2024-07-25 04:46:48
 
 [hanvico.net.vn]
 match = -42.1%%
@@ -13,8 +13,8 @@ url = https://hanvico.net.vn/products/ruot-goi-long-vu-cao-cap-30x50
 
 [demvip.vn]
 match = 10.5%%
-title = Ruột gối lông vũ cao cấp 50*70
-url = https://demvip.vn/products/ruot-goi-long-vu-cao-cap-50-70
+title = Ruột gối lông vũ cao cấp 45*65
+url = https://demvip.vn/products/ruot-goi-long-vu-cao-cap-1
 
 [antbedding.com]
 match = 78.9%%
@@ -54,7 +54,7 @@ url = https://aoiconcept.com/products/ruot-goi-nam-cao-cap-a-oi-concept-50x70cm-
 [jysk.vn]
 match = -100.0%%
 title = Ruột gối lông vũ | KRONBORG LOFTET | 50x70cm | 720gr
-url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr?srsltid=AfmBOor49WD-GnTEL0JEQkzPWs8PRF8I6McHdW5fylb3R2sIQygBNHvR
+url = https://jysk.vn/ruot-goi-long-vu-kronborg-loftet-50x70cm-720gr
 
 [shopee.vn]
 match = -110.5%%
