CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-25 03:49:11
+lastsearch = 2024-07-25 05:13:20
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -52,9 +52,9 @@ title = Khu vực Trung Bộ, chiều tối có mưa rải rác và ban ngày tr
 url = https://www.youtube.com/watch?v=cuMsrlsOkVg
 
 [vi.wikipedia.org]
-match = -75.0%%
-title = Sóc Trăng – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Sóc_Trăng
+match = -50.0%%
+title = Chân Lạc – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Chân_Lạc
 
 [www.lotteria.vn]
 match = 6.2%%
