--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-07-25 04:17:38
+lastsearch = 2024-07-25 05:14:13
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Bộ Chăn Ga Gối Solid SA 18 (120*190 cm) - Koala
 url = https://www.koala.vn/bo-chan-ga-goi-solid-sa-18.html
 
 [shopee.vn]
-match = -42.3%%
-title = Bộ chăn ga gối 5 món chăn phao trần bông dày siêu nhẹ ...
-url = https://shopee.vn/Bộ-chăn-ga-gối-5-món-chăn-phao-trần-bông-dày-siêu-nhẹ-cao-cấp-không-cần-lồng-vỏ-tiện-lợi-i.256686586.9136448059
+match = -34.6%%
+title = Bộ Chăn Ga Gối Cotton Poly Hạc Hồng Chăn Chần Bông ...
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Poly-Hạc-Hồng-Chăn-Chần-Bông-Dày-Dặn-i.214539081.4247239060
 
 [bedding.vn]
 match = -42.3%%
