--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-07-25 04:44:25
+lastsearch = 2024-07-25 05:16:10
 
 [www.instagram.com]
 match = -6.7%%
@@ -207,9 +207,9 @@ title = Hoi Wing Chan
 url = https://research.polyu.edu.hk/en/persons/hoi-wing-chan
 
 [www.facebook.com]
-match = -13.3%%
-title = Oi Ching CHAN - Conductor
-url = https://www.facebook.com/oichingchanconductor/
+match = -220.0%%
+title = Interview with a Hong Kong police officer Chan Hoi-kong ...
+url = https://www.facebook.com/chinadailyhkedition/videos/interview-with-a-hong-kong-police-officer-chan-hoi-kong/527931144527677/
 
 [www.beyondtheshort.com]
 match = -80.0%%
