--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-24 23:36:23
+lastsearch = 2024-07-25 05:14:36
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -328,8 +328,8 @@ url = https://www.adb.org/vi/where-we-work/viet-nam
 
 [us.trip.com]
 match = -91.3%%
-title = Best 10 Hotels Closest to nhà cái uy tín in Ho Chi Minh City
-url = https://us.trip.com/hotels/ho-chi-minh-city-nh-ci-uy-tn/hotels-c301m52740329/
+title = Hotels near Công viên văn hóa Tân Thới Nhì, Ho Chi Minh City
+url = https://us.trip.com/hotels/ho-chi-minh-city-cng-vin-vn-ha-tn-thi-nh/hotels-c301m29192443/
 
 [en.tripadvisor.com.hk]
 match = -113.0%%
