--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-07-25 01:19:06
+lastsearch = 2024-07-25 05:18:28
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOopWSD0gsIda6xITTGxAvbyuCnh6GkLaePWjrHOoU4P1LVY3fvvJ
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = 0.0%%
@@ -49,7 +49,7 @@ url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 [foreverbedding.net]
 match = 0.0%%
 title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOor72S3KIMMfpXNa3vAuaBufj13P6VGS1QSeVOdM7Sc6hjNeKsNA
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [mandep.vn]
 match = 37.0%%
