--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-25 03:18:48
+lastsearch = 2024-07-25 05:20:29
 
 [tiki.vn]
 match = -47.6%%
@@ -87,9 +87,9 @@ title = Đài Loan (Trung Quốc) tiếp tục tìm kiếm 18 người mất tí
 url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich-sau-dong-dat-post803249.html
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+match = 19.0%%
+title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [znews.vn]
 match = -104.8%%
@@ -212,9 +212,9 @@ title = Phim Đài Loan
 url = https://motchilltv.to/quoc-gia/dai-loan
 
 [www.bbc.com]
-match = -138.1%%
-title = Người Việt bị từ chối tị nạn tại Anh: Buộc hồi hương trong ...
-url = https://www.bbc.com/vietnamese/articles/cx02e0dk871o
+match = -123.8%%
+title = Chú rể 40 tuổi đẹp trai chi 700.000 tệ cưới cô dâu Việt 18 ...
+url = https://www.bbc.com/vietnamese/articles/cyx0jw1ypq9o
 
 [cau-ca.com]
 match = -42.9%%
