--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-25 02:29:25
+lastsearch = 2024-07-25 05:15:41
 
 [www.gov.uk]
 match = -200.0%%
@@ -97,8 +97,8 @@ title =
 url = https://austinimmigrationattorney.com/practice-areas/family-immigration/stepchild-petition-form-i-130/
 
 [www.consolidatedtheatres.com]
-match = -126.7%%
-title = Movie Information | Tickets | Showtimes |
+match = -120.0%%
+title = Movie Information | Tickets | Showtimes
 url = https://www.consolidatedtheatres.com/
 
 [www.bkfc.com]
