--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-25 04:50:22
+lastsearch = 2024-07-25 05:30:28
 
 [erado.vn]
 match = 5.0%%
@@ -12,9 +12,9 @@ title = Giường da hạng sang mã DV14
 url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html
 
 [shopee.vn]
-match = -100.0%%
-title = Thảm trải giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm trải giường
+match = -65.0%%
+title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường
 
 [noithatami.com]
 match = -75.0%%
