CI images update

--- a/images/nem-everon-140x200x9/config.ini
+++ b/images/nem-everon-140x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-140x200x9.html
 lastopen = 2024-06-06 17:10:12
 
 [search]
-lastsearch = 2024-07-25 05:33:30
+lastsearch = 2024-07-25 06:17:53
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -110,4 +110,9 @@ url = https://www.youtube.com/watch?v=KrvocPGYQbM
 match = -5.0%%
 title = Chăn ga gối đệm Everon - Hà Nội
 url = https://everonkorea.com/everon/
+
+[www.facebook.com]
+match = -5.0%%
+title = Chăn ga gối đệm everon Đông Anh
+url = https://www.facebook.com/p/Chăn-ga-gối-đệm-everon-Đông-Anh-100054215798345/?locale=hu_HU
 
