--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-07-25 03:31:30
+lastsearch = 2024-07-25 06:19:28
 
 [demxanh.com]
 match = -60.9%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc cao bằng 1.4 X 1.95
 url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
 
 [shopee.vn]
-match = -56.5%%
-title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè ...
-url = https://shopee.vn/Chiếu-Trúc-Long-Chiếu-Tre-Cao-bằng-Nan-to-loại-đẹp-Mát-Lạnh-Mùa-Hè-Đủ-Tất-Cả-Các-Kích-Thước-i.126028938.19577907706
+match = 47.8%%
+title = Chiếu tăm tre Cao Bằng đủ size
+url = https://shopee.vn/Chiếu-tăm-tre-Cao-Bằng-đủ-size-i.231274383.6339749052
 
 [lombom.com]
 match = -60.9%%
@@ -27,9 +27,9 @@ title = Chiếu trúc Cao Bằng Cao Sơn chất lượng cao - Lombomshop!
 url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 
 [www.diepxuan.com]
-match = 26.1%%
-title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html
+match = 21.7%%
+title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
 
 [chieutrucsaigon.com]
 match = -17.4%%
