--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-25 03:29:18
+lastsearch = 2024-07-25 06:16:37
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -57,9 +57,9 @@ title = HT - Exoticzone
 url = https://hactexoticzone.com/
 
 [www.youtube.com]
-match = -246.7%%
-title = Tổng kết 10 năm phòng, chống, khắc phục hậu quả thiên tai ...
-url = https://www.youtube.com/watch?v=sUa4UOlGnzs
+match = -166.7%%
+title = CHƠI- kỳ 10- Ngón Tay Chỉ Trăng -HT THÍCH TỪ THÔNG
+url = https://www.youtube.com/watch?v=tZWh9zAOkYM
 
 [thaibinhseed.com.vn]
 match = -193.3%%
