--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-25 04:49:36
+lastsearch = 2024-07-25 06:20:22
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
-match = 3.6%%
-title = CHIẾU NHỰA ĂN CƠM 4M chiếu nhựa 2 mâm siêu đẹp
-url = https://shopee.vn/CHIẾU-NHỰA-ĂN-CƠM-4M-chiếu-nhựa-2-mâm-siêu-đẹp-TTTM-Tuấn-Bình-i.292600121.12379642366
+match = 35.7%%
+title = Chiếu nhựa loại đẹp Hà Nội, chiếu ...
+url = https://shopee.vn/Chiếu-nhựa-loại-đẹp-Hà-Nội-chiếu-nhựa-chiếu-nhựa-gấp-gọn-chiếu-ngủ-văn-phòng-du-lịch-dã-ngoại-i.26647481.24652949365
 
 [tiki.vn]
 match = -21.4%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = -10.7%%
-title = chiếu ngồi 2-3 mâm cỗ - trải phòng khách - Cnhua
-url = https://www.sendo.vn/chieu-nhua-kho-rong-chieu-ngoi-2-3-mam-co-trai-phong-khach-8398796.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721088000325_undefined_-1_cateLvl2_0_55_23_-1
+match = -7.1%%
+title = Chiếu Nhựa Văn Phòng Bền Đẹp, Rẻ Như Tặng, Chất ...
+url = https://www.sendo.vn/chieu-nhua-van-phong.htm
 
 [mia.vn]
 match = -39.3%%
