--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-07-25 05:44:06
+lastsearch = 2024-07-25 06:15:11
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -27,9 +27,9 @@ title = [ Ảnh thật 100%%] Chiếu trúc Quế Lâm loại 1 cao cấp 2 mắ
 url = https://shopee.vn/-Ảnh-thật-100-Chiếu-trúc-Quế-Lâm-loại-1-cao-cấp-2-mắt-ngọc-i.19058947.7184515371
 
 [demxanh.com]
-match = -25.0%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -21.4%%
+title = Bảng giá chiếu trúc Hương Trúc chính hãng giá rẻ ...
+url = https://demxanh.com/chieu-truc-huong-truc.html
 
 [tiki.vn]
 match = -39.3%%
