--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-25 04:16:45
+lastsearch = 2024-07-25 06:20:00
 
 [www.bible.com]
-match = -100.0%%
-title = MATHAIA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MAT.22.MIZCLBSI
+match = -117.6%%
+title = 1 KORINTH 14 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/1CO.14.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
@@ -17,9 +17,9 @@ title = Exodus 1-40 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -82.4%%
-title = John 20:22 New International Version
-url = https://www.biblegateway.com/passage/?search=John 20:22&version=NIV
+match = -129.4%%
+title = Matthew 20:22 NIV - “You don't know what you are
+url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -205.9%%
-title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
+match = -17.6%%
+title = Doktrin na ol Kavanen 78
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
