--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-25 03:30:23
+lastsearch = 2024-07-25 06:12:42
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -300.0%%
-title = TUI Group – The one of the world's leading tourism groups
-url = https://www.tuigroup.com/en-en
+match = -250.0%%
+title = TUI brand name may no longer be used by TUI Russia
+url = https://www.tuigroup.com/en-en/media/press-releases/2022/2022-03-10-tui-terminates-agreement
 
 [www.tui.nl]
 match = -300.0%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -41.7%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = 36.4%%
+title = tui sitemap
+url = https://www.tui.co.uk/sitemap
 
 [maritime-executive.com]
 match = -316.7%%
