CI images update

--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-25 03:20:26
+lastsearch = 2024-07-25 06:34:11
 
 [eva.vn]
-match = -110.5%%
-title = Cây này nở hoa bồng bềnh như mây, tỏa hương thơm ...
+match = -131.6%%
+title = Cây này nở hoa bồng bềnh như mây, tỏa hương thơm ngát ...
 url = https://eva.vn/cay-canh-vuon/cay-nay-no-hoa-bong-benh-nhu-may-toa-huong-thom-ngat-trong-truoc-cua-se-hut-tai-loc-vao-nha-c283a587503.html
 
 [phunutoday.vn]
@@ -22,9 +22,9 @@ title = Chiếu trúc Mộc lá cao cấp chất lượng cao đủ kích cỡ
 url = https://shopee.vn/Chiếu-trúc-Mộc-lá-cao-cấp-chất-lượng-cao-đủ-kích-cỡ-i.296736591.8061367106
 
 [mocnhienfarm.com]
-match = -7.7%%
-title = Cây pháo bông
-url = https://mocnhienfarm.com/products/cay-phao-bong
+match = 10.5%%
+title = Hoa chiều tím trắng cao E1
+url = https://mocnhienfarm.com/products/hoa-chieu-trang
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
@@ -290,4 +290,9 @@ url = https://mytour.vn/vi/blog/bai-viet/top-12-loai-cay-ua-bong-ram-mang-lai-kh
 match = -10.5%%
 title = Chiếu trúc Mộc Viền Lá Cây giá rẻ
 url = https://demxanh.com/chieu-truc-moc-vien-la-cay.html
+
+[baophapluat.vn]
+match = -21.1%%
+title = Chiều xuyên qua bóng một cây sồi già
+url = https://baophapluat.vn/chieu-xuyen-qua-bong-mot-cay-soi-gia-post205013.html
 
