--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-25 05:52:53
+lastsearch = 2024-07-25 06:34:47
 
 [everon.online]
 match = -7.4%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Gối Everon SR01 Chính Hãng
 url = https://everon.online/products/bo-everon-sr01
 
 [everonvn.com.vn]
-match = -74.1%%
-title = Bộ Chăn Ga Everon Epm-21071 chất liệu Gỗ Sồi (Modal) mẫu ...
-url = https://everonvn.com.vn/everon/2130/bo-everon-epm-21071?srsltid=AfmBOooYDtB_xFQ6cHTaLpMVjl12DLRXnMXFnUhP2Lu6Fu0K1zRlmHvA
+match = -66.7%%
+title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
+url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
 
 [tongdailyeveron.com.vn]
 match = -5.3%%
@@ -24,27 +24,27 @@ url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 [demxanh.com]
 match = -7.4%%
 title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html?srsltid=AfmBOoppfCJmx1atKQ6BvWB62DuYfYKQY-VOtpAHxZrQ48ssEACNCooE
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
-match = 22.2%%
-title = Bộ chăn ga gối Everon EPM-21070
-url = http://everonhanquoc.vn/everon/12768/bo-chan-ga-goi-everon-epm-21070
+match = 18.5%%
+title = Bộ chăn ga gối Everon EPC-21053
+url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
 
 [everonhn.com.vn]
-match = -18.5%%
-title = Bộ chăn ga Artemis ASM 20101 - Everon Hà Nội
-url = https://everonhn.com.vn/bo-chan-ga-artemis-asm-20101
+match = 33.3%%
+title = Bộ chăn ga Everon ESB -22020
+url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
-match = -18.5%%
-title = Bộ Everon Epm-21069 - Chăn ga gối đệm Everon
-url = https://everon.net.vn/everon/2132/bo-everon-epm-21069
+match = 5.3%%
+title = Bộ Everon Esm-21013
+url = https://everon.net.vn/everon/2123/bo-everon-esm-21013
 
 [sieuthidemhanquoc.com.vn]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPM-21068
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21068-1525
+title = Bộ chăn ga gối Everon EPT-21045
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-ept-21045-1527
 
 [shopee.vn]
 match = -44.4%%
