--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-07-25 06:16:57
+lastsearch = 2024-07-25 06:31:36
 
 [sieuthidemonline.vn]
 match = -66.7%%
@@ -22,14 +22,14 @@ title = Đệm lò xo Techwood - thương hiệu Tuấn Anh hàng đầu.
 url = https://chuyenhangviet.com/dem-lo-xo-techwood/
 
 [demxanh.com]
-match = -95.2%%
-title = Bảng giá đệm lò xo Tuấn Anh khuyến mãi mới nhất năm ...
-url = https://demxanh.com/bang-gia-dem-lo-xo-tuan-anh-nam-2018.html?srsltid=AfmBOorWCXyawAzpkACBS4BZRzvcbRibuH8hL72X_CiDvpG9t7272Tgc
+match = -81.0%%
+title = [Cập nhật] Bảng giá đệm lò xo Tuấn Anh mới nhất 2020
+url = https://demxanh.com/cap-nhat-bang-gia-dem-lo-xo-tuan-anh-moi-nhat-2020.html
 
 [www.diepxuan.com]
 match = 4.8%%
 title = Nệm lò xo TechWood 160x200x23 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html?srsltid=AfmBOopzMP8SGg08_btInO-ccrY7esaIHzN9P5qsKOJywQm8ktgR-NuF
+url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html
 
 [shopee.vn]
 match = -61.9%%
