--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-25 03:35:30
+lastsearch = 2024-07-25 06:34:56
 
 [demxanh.com]
-match = -131.6%%
-title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống Demxanh. ...
+match = -84.2%%
+title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
 url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
@@ -42,9 +42,9 @@ title = Hoi An Memories Resort & Spa
 url = https://hoianmemoriesresort.com/
 
 [www.tripadvisor.com.vn]
-match = -73.7%%
-title = 10 Khách sạn tốt nhất tại Úc - Tripadvisor
-url = https://www.tripadvisor.com.vn/Hotels-g255055-Australia-Hotels.html
+match = -94.7%%
+title = 10 Khách sạn Sang trọng nhất tại Úc - Tripadvisor
+url = https://www.tripadvisor.com.vn/Hotels-g255055-zff12-Australia-Hotels.html
 
 [3rvietnam.com.vn]
 match = 0.0%%
@@ -207,9 +207,9 @@ title = Vietnam Australia Vocational College - Trường Việt Úc
 url = https://www.facebook.com/vietnamaustraliavocationalcollege/?locale=vi_VN
 
 [www.vn.kayak.com]
-match = -52.6%%
-title = Khách sạn ở Sydney từ 432.460 ₫/đêm
-url = https://www.vn.kayak.com/Sydney-Hotels.2258.hotel.ksp
+match = -105.3%%
+title = Khách sạn ở Melbourne từ 404.961 ₫/đêm - KAYAK
+url = https://www.vn.kayak.com/Melbourne-Hotels.13998.hotel.ksp
 
 [suongtuyet.com]
 match = -105.3%%
