--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-25 05:37:02
+lastsearch = 2024-07-25 06:30:57
 
 [www.tui.co.uk]
 match = -250.0%%
@@ -167,9 +167,9 @@ title = Korean Dham Doi (Tan Tui) Interpretation
 url = https://www.youtube.com/watch?v=9KjmM8FLEqE
 
 [www.thenaturaladventure.com]
-match = -325.0%%
-title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
-url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
+match = -283.3%%
+title = Camino Portugues Last 100km: Tui to Santiago in 8 Days
+url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-tui-to-santiago-in-8-days/
 
 [www.tripadvisor.com]
 match = -275.0%%
@@ -232,9 +232,9 @@ title = Index of /assets/libs/tui-chart/maps
 url = https://www.dixondirectional.com/assets/libs/tui-chart/maps/
 
 [www.bloomberg.com]
-match = -41.7%%
-title = TUI AG Stock Price Quote
-url = https://www.bloomberg.com/quote/TUI:LN
+match = -150.0%%
+title = TUI1: TUI AG Stock Price Quote - Xetra
+url = https://www.bloomberg.com/quote/TUI1:GR
 
 [www.tuj.ac.jp]
 match = -333.3%%
