--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-25 06:52:10
+lastsearch = 2024-07-25 09:03:35
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -62,9 +62,9 @@ title = Nhận biết - phân biệt: "Hạt lạc - Hạt đỗ". Lớp Nhà tr
 url = https://mngiaquat.longbien.edu.vn/hoat-dong-chuyen-mon-khoi-nha-tre/nhan-biet-phan-biet-hat-lac-hat-do-lop-nha-tre-d2/ctmb/9991/669168
 
 [shopee.vn]
-match = -226.7%%
-title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
-url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
+match = -206.7%%
+title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
+url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
 
 [quangharvest.com]
 match = -186.7%%
@@ -390,4 +390,9 @@ url = https://img.nordangliaeducation.com/resources/asia/_filecache/b26/be6/6344
 match = -186.7%%
 title = Hệ Thống cửa hàng Circle K Việt NamCircle K Việt Nam
 url = https://www.circlek.com.vn/vi/he-thong-circle-k/
+
+[hellocon.vn]
+match = -66.7%%
+title = Hộp 14 bút màu Pororo Hàn Quốc
+url = https://hellocon.vn/hop-14-but-mau-pororo-han-quoc
 
