CI images update

--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-25 06:34:36
+lastsearch = 2024-07-25 08:52:13
 
 [chieutruc.info]
 match = -60.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = -28.0%%
-title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+match = -24.0%%
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [shopee.vn]
 match = -64.0%%
@@ -47,9 +47,9 @@ title = Chiếu Trúc Cao Sơn Cao Bằng | Cao Bang
 url = https://www.facebook.com/chieutruccaobangcbg/
 
 [caobangtv.vn]
-match = -76.0%%
-title = Tổng Bí thư Nguyễn Phú Trọng - Nhà lãnh đạo được nhân ...
-url = http://caobangtv.vn/tin-tuc-n75190/tong-bi-thu-nguyen-phu-trong--nha-lanh-dao-duoc-nhan-dan-yeu-men.html
+match = 20.0%%
+title = Truyền hình Cao Bằng
+url = http://caobangtv.vn/
 
 [tienphong.vn]
 match = -60.0%%
@@ -190,4 +190,9 @@ url = https://www.lazada.vn/products/chieu-truc-long-chieu-tre-cao-bang-nan-to-l
 match = -52.0%%
 title = Chiếu Trúc Cao Bằng Hàng Xịn, Giá Deal Sốc, Ship Cod ...
 url = https://www.sendo.vn/chieu-truc-cao-bang.htm
+
+[baocaobang.vn]
+match = 0.0%%
+title = “Trái ngọt” từ đam mê võ thuật
+url = https://baocaobang.vn/trai-ngot-tu-dam-me-vo-thuat-3170865.html
 
