--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-25 04:21:34
+lastsearch = 2024-07-25 09:05:16
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = 0.0%%
-title = Green Book (2018)
-url = https://www.imdb.com/title/tt6966692/
+match = -14.3%%
+title = The Jungle Book (2016)
+url = https://www.imdb.com/title/tt3040964/
 
 [www.etsy.com]
 match = 35.7%%
@@ -82,9 +82,9 @@ title = Miếng dán màn hình laptop chống tia UV, ánh sáng xanh ...
 url = https://shopee.vn/Miếng-dán-màn-hình-laptop-chống-tia-UV-ánh-sáng-xanh-bảo-vệ-mắt-(film-cao-cấp)-i.40381945.12466079786
 
 [www.dienmayxanh.com]
-match = -271.4%%
-title = Top 5 laptop Asus Vivobook giá rẻ dưới 15 triệu tốt nhất ...
-url = https://www.dienmayxanh.com/kinh-nghiem-hay/top-5-chiec-laptop-vivobook-cua-asus-gia-re-nhat-t-1223427
+match = -242.9%%
+title = Màn hình máy tính 23.8 inch chính hãng, giá rẻ, giao nhanh
+url = https://www.dienmayxanh.com/man-hinh-may-tinh-23-8-inch
 
 [thecoffeehouse.com]
 match = 28.6%%
@@ -335,4 +335,9 @@ url = https://www.labattusa.com/
 match = -171.4%%
 title = Sự cố Màn hình xanh Windows trở nên nghiêm trọng
 url = https://genk.vn/su-co-man-hinh-xanh-windows-tro-nen-nghiem-trong-hang-loat-ngan-hang-san-bay-tren-toan-cau-dinh-tre-hang-trieu-nguoi-bi-anh-huong-20240719160047542.chn
+
+[thegioiremcua.vn]
+match = -157.1%%
+title = Màn vải phòng khách màu xanh cho mùa hè mát mẻ
+url = https://thegioiremcua.vn/san-pham/man-vai-phong-khach-mau-xanh-cho-mua-he-mat-me/
 
