--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-25 03:44:12
+lastsearch = 2024-07-25 09:02:33
 
 [ninhouse.vn]
 match = -246.2%%
 title = Áo gối | Bao gối đẹp giá rẻ NIN House cao cấp tại Tphcm
-url = https://ninhouse.vn/collections/vo-goi?srsltid=AfmBOopkxWyRQ1xeGXuAgTMyOW6iF20I2z_cKH75m0kgBziZW2xjcldb
+url = https://ninhouse.vn/collections/vo-goi
 
 [www.lamido.vn]
 match = 46.2%%
@@ -24,7 +24,7 @@ url = https://www.translate.com/vietnamese-english
 [ru9.vn]
 match = -107.7%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOorWwpjQUlYtFl6fKCAzCJ83l3LGtVcmAx5MD5khiqd0m3_4FnJz
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
 
 [www.reddit.com]
 match = -230.8%%
@@ -82,9 +82,9 @@ title = Vietnamese-English dictionary - translation
 url = https://en.bab.la/dictionary/vietnamese-english/
 
 [shopee.vn]
-match = -184.6%%
-title = vỏ ruột gối ôm giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ ruột gối ôm&urlold=vo-goi-om-long-ruot-mau-mon-xanh/8494718674863723139/343220106741734172/ 
+match = -153.8%%
+title = vỏ gối kê cổ giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/ 
 
 [songhong.info]
 match = -161.5%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -215.4%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOor6IP9Bcyp6GjPpmfqG2giTg6ndwMXR-7Bn7xfIw8Zcf3t6fe57
+url = https://jysk.vn/vo-goi-trang-tri
 
 [www.everonvn.vn]
 match = 15.4%%
