--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-07-25 08:04:05
+lastsearch = 2024-07-25 09:09:30
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chiếu Tre Shikada Nhật Bản cao cấp 160x200cm - Kyoryo
 url = https://kyoryo.vn/chieu-cao-cap/chieu-tre-shikada-nhat-ban-cao-cap-160x200cm.html
 
 [chieutrelanlan.com]
-match = -4.3%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
+match = -87.0%%
+title = Chiếu trúc, tre 1m2 hạt nhỏ loại không viền màu trắng giá tốt
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-120x190cm-16.html
 
 [demxanh.com]
 match = -30.4%%
@@ -32,9 +32,9 @@ title = 5 loại chiếu cực mát lưng cho mùa hè, được ưa chuộng ..
 url = https://www.dienmayxanh.com/kinh-nghiem-hay/5-loai-chieu-nam-mat-lim-lung-cho-mua-he-duoc-ua-1267470
 
 [chieutrucsaigon.com]
-match = 0.0%%
-title = BÁN CHIẾU TRÚC MẮT NHỎ 1M6 HƯƠNG TRÚC
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-mat-nho-1m6-huong-truc-70.html
+match = -30.4%%
+title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
 
 [shopee.vn]
 match = -43.5%%
