--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-25 06:17:19
+lastsearch = 2024-07-25 08:55:43
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -185.7%%
-title = HƯỚNG DẪN CÁCH PHỤC HỒI THẺ XANH SAU KHIỞ VIỆT ...
-url = https://www.youtube.com/watch?v=3ycihnhaARo
+match = -321.4%%
+title = Rod Stewart - The Killing Of Georgie (Part I & II) (Official Video)
+url = https://www.youtube.com/watch?v=95zxtaKQBBc
 
 [www.reddit.com]
 match = -64.3%%
@@ -82,14 +82,14 @@ title = 10 Natural Ways to Build Healthy Bones
 url = https://www.healthline.com/nutrition/build-healthy-bones
 
 [en.wikipedia.org]
-match = -20.0%%
-title = Green card
-url = https://en.wikipedia.org/wiki/Green_card
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Blue_Bayou_(film)
 
 [www.imdb.com]
-match = 7.1%%
-title = The Mask (1994)
-url = https://www.imdb.com/title/tt0110475/
+match = 0.0%%
+title = Blue Bayou (2021)
+url = https://www.imdb.com/title/tt11121664/
 
 [www.boundless.com]
 match = -128.6%%
@@ -182,9 +182,9 @@ title =
 url = https://www.metacritic.com/tv/blue-eye-samurai/user-reviews/
 
 [www.etsy.com]
-match = 35.7%%
-title = Ao Dai Xanh Mint
-url = https://www.etsy.com/market/ao_dai_xanh_mint
+match = -242.9%%
+title = An Thái Wax Apple - 1 to 2 Feet Tall - Ship in 3gal Pot
+url = https://www.etsy.com/listing/1334421773/mn-an-thai-xanh-an-thai-wax-apple-1-to-2
 
 [tpplayer-video-featured-snippets.googleusercontent.com]
 match = 0.0%%
@@ -430,4 +430,9 @@ url = https://la.linkedin.com/company/greensmartmobility
 match = -71.4%%
 title = Cái cây xanh xanh của các bà bầu
 url = http://parlec.com/app3769299
+
+[www.yelp.com]
+match = -214.3%%
+title = Top 10 Best Xanh Restaurant Near San Jose, California
+url = https://www.yelp.com/search?find_desc=Xanh+Restaurant&find_loc=San+Jose,+CA
 
