--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-07-25 06:44:30
+lastsearch = 2024-07-25 09:04:55
 
 [thefelix.vn]
 match = -50.0%%
@@ -135,4 +135,9 @@ url = https://noithatnhatbao.com/product-category/nem-cao-su-thien-nhien-pleiku-
 match = 44.8%%
 title = NỆM CAO SU THIÊN NHIÊN UNIQUE
 url = https://nemkhuyenmai.com/nem-cao-su-thien-nhien-unique.html
+
+[bsaonline.vn]
+match = 57.1%%
+title = NỆM CAO SU THIÊN NHIÊN FELIX
+url = https://bsaonline.vn/nem-cao-su-thien-nhien-felix/
 
