--- a/images/vo-goi-ke-warmdream-45x65-hq/config.ini
+++ b/images/vo-goi-ke-warmdream-45x65-hq/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 lastopen = 2024-07-01 10:42:00
 
 [search]
-lastsearch = 2024-07-25 06:32:38
+lastsearch = 2024-07-25 09:03:55
 
 [www.diepxuan.com]
 match = 28.6%%
 title = Điệp Xuân Vỏ gối kê màu 45x65
-url = https://www.diepxuan.com/vo-goi-ke-mau-45x65.html?srsltid=AfmBOops1hByKn9aglfiZ-7ugn3JnAVN2DfABoeUOuq2eEMHcewgz5bZ
+url = https://www.diepxuan.com/vo-goi-ke-mau-45x65.html
 
 [www.head-fi.org]
 match = 8.0%%
