--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-25 05:21:12
+lastsearch = 2024-07-25 09:49:12
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -60.0%%
+title = United States biological weapons program
+url = https://en.wikipedia.org/wiki/United_States_biological_weapons_program
 
 [www.facebook.com]
 match = -160.0%%
@@ -268,8 +268,8 @@ url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furiou
 
 [en.yna.co.kr]
 match = -160.0%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+title = S. Korean vice foreign minister holds bilateral meetings at ...
+url = https://en.yna.co.kr/view/AEN20171121002500315
 
 [www.vlr.gg]
 match = 5.6%%
