--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-25 09:04:38
+lastsearch = 2024-07-25 10:28:04
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -255,4 +255,14 @@ url = https://www.vinmec.com/vie/bai-viet/10-dau-hieu-cho-thay-con-ban-bi-di-ung
 match = 0.0%%
 title = Điểm báo ngày 10/10/2021-11/10/2021
 url = https://cdc.thuathienhue.gov.vn/DichVu/ThongTin/CapNhat/prints.aspx?tinid=76150
+
+[cafef1.mediacdn.vn]
+match = 3.6%%
+title = bao cao tai chinh hop nhat giianiendo
+url = https://cafef1.mediacdn.vn/Images/Uploaded/DuLieuDownload/2019/POT_19Q2_BCTC_HNSX.pdf
+
+[thanhtra.gov.vn]
+match = -35.7%%
+title = 1.183 /TB-TTCP - Ha NA ngay023 thong 7 nom 2021
+url = https://thanhtra.gov.vn/en_US/web/guest/xem-chi-tiet-tin-tuc?p_p_id=dschutichnews_WAR_vnpteportalchutichnewsportlet_INSTANCE_SnDiNWOCbABy&p_p_lifecycle=2&p_p_state=normal&p_p_mode=view&p_p_resource_id=downloadFile&p_p_cacheability=cacheLevelPage&p_p_col_id=_118_INSTANCE_5O9Gs6eCjwkd__column-1&p_p_col_count=2&_dschutichnews_WAR_vnpteportalchutichnewsportlet_INSTANCE_SnDiNWOCbABy_attackFileUUId=/documents/20181/4488511/0_20210726162904.pdf/f0b2c6b3-6fec-4203-a043-385673679849&_dschutichnews_WAR_vnpteportalchutichnewsportlet_INSTANCE_SnDiNWOCbABy_nameFile=2-2021-cq-1183-1.PDF
 
