--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-25 06:17:08
+lastsearch = 2024-07-25 10:21:00
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -18.8%%
-title = game chill chill thư giãn
-url = https://www.youtube.com/watch?v=rcCAVOIfgnU
+match = -206.2%%
+title = Nhà ai có CÚNG GIỖ mỗi năm lưu ý kĩ việc này - Vấn Đáp ...
+url = https://www.youtube.com/watch?v=rrQtAQA8qGI
 
 [saigontourist.edu.vn]
 match = -162.5%%
@@ -422,9 +422,9 @@ title = Báo cáo về việc điều chỉnh cục bộ Đồ án điều chỉ
 url = https://sovhtt.caobang.gov.vn/Default.aspx?sid=1355&pageid=34288&catid=94914&id=858488&catname=quy-hoach-phuong-xa&title=bao-cao-ve-viec-dieu-chinh-cuc-bo-do-an-dieu-chinh-quy-hoach-chung-thi-tran-pac-miau-huyen-bao-l
 
 [baotintuc.vn]
-match = -206.2%%
-title = Nâng cao tính chuyên nghiệp, hiệu quả, thực tiễn công tác ...
-url = https://baotintuc.vn/thoi-su/nang-cao-tinh-chuyen-nghiep-hieu-qua-sat-thuc-tien-cua-cong-tac-thong-tin-doi-ngoai-20240717175005909.htm
+match = -231.2%%
+title = Sau 18h ngày 25/7, Nhân dân có thể vào viếng Tổng Bí thư ...
+url = https://baotintuc.vn/thoi-su/sau-18h-ngay-257-nhan-dan-co-the-vao-vieng-tong-bi-thu-nguyen-phu-trong-20240725093853775.htm
 
 [langsontv.vn]
 match = -56.2%%
@@ -595,4 +595,9 @@ url = https://amiensaikido.fr/4033009-clip-băng-băng-phạm-sex.html
 match = -125.0%%
 title = Gái Trai Xinh Bar đi Anh đẹp - Audio Clear
 url = https://audioclear.fr/2130507-anh-gái-đi-trai-xinh-bar-đẹp.html
+
+[www.csgt.vn]
+match = 12.5%%
+title = ĐIỂM BÁO NGÀY 18/7/2024
+url = https://www.csgt.vn/m/tintuc/19177/DIEM-BAO-NGAY-18/7/2024.html
 
