--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-24 19:59:46
+lastsearch = 2024-07-25 10:25:36
 
 [www.lazada.vn]
 match = -17.4%%
@@ -12,14 +12,14 @@ title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
 url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
 
 [www.facebook.com]
-match = 85.0%%
-title = Chiếu Nhựa Thái Bình
-url = https://www.facebook.com/chieunhuathaibinh/?locale=cs_CZ
+match = 52.2%%
+title = Chiếu Nhựa Thái Bình | Thanh Hóa
+url = https://www.facebook.com/chieunhuathaibinh/
 
 [www.sendo.vn]
-match = -34.8%%
-title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
-url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
+match = 34.8%%
+title = Chiếu nhựa thái bình 1m x 1m9 - chieu
+url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
 
 [shopee.vn]
 match = 26.1%%
@@ -72,9 +72,9 @@ title = Ngói Nhựa Thái Bình Giá Bán Lẻ Ngói Nhựa ASA/PVC 04 Lớp
 url = https://www.tonpvc.com/thai-binh-gia-ban-le-ngoi-nhua-asa-pvc-04-lop/
 
 [www.diepxuan.com]
-match = 26.1%%
-title = Chiếu nhựa Thái Bình 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-160x200.html
+match = 13.0%%
+title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
 
 [h5.lazada.vn]
 match = -17.4%%
