--- a/images/chieu-truc-den-khong-vien-lson-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 lastopen = 2024-06-07 00:19:36
 
 [search]
-lastsearch = 2024-07-25 06:34:00
+lastsearch = 2024-07-25 10:17:53
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -28,8 +28,8 @@ url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
 
 [chieutrelanlan.com]
 match = 21.2%%
-title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
+title = Chiếu trúc mắt nhỏ có viền màu đen 180x200cm (1m8)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-180x200cm-32.html
 
 [tiki.vn]
 match = 18.2%%
