--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-25 04:15:50
+lastsearch = 2024-07-25 10:27:42
 
 [www.zillow.com]
 match = -69.2%%
@@ -605,4 +605,9 @@ url = https://www.johnniewalker.com/en-us/our-whisky/core-range/johnnie-walker-a
 match = -307.7%%
 title = Trump election case: Fani Willis accuses estranged wife of ...
 url = https://apnews.com/article/willis-wade-relationship-allegations-trump-election-indictment-aef1b2b7fca5bb03d4886cee4c5fee3b
+
+[www.lazada.vn]
+match = -176.9%%
+title = Ga Ni Long Giá Tốt T07/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/ga-ni-long/
 
