--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-25 05:30:28
+lastsearch = 2024-07-25 10:20:18
 
 [erado.vn]
 match = 5.0%%
@@ -12,9 +12,9 @@ title = Giường da hạng sang mã DV14
 url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html
 
 [shopee.vn]
-match = -65.0%%
-title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải giường
+match = -100.0%%
+title = Thảm trải giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm trải giường
 
 [noithatami.com]
 match = -75.0%%
@@ -235,4 +235,9 @@ url = https://www.tiktok.com/discover/avcm71328u6
 match = -30.0%%
 title = Thông tin tuyên truyền - Tổng quát
 url = https://www.binhduong.gov.vn/Lists/thongtintuyentruyen/TongQuat.aspx?&&p_Modified=20231218 11:12:21&&PageFirstRow=1&&View={51EFF93F-05BD-4682-A34C-4555A811CCEC}
+
+[cuahangchangagoidem.com]
+match = -130.0%%
+title = 19 Bộ Ga Giường Cao Cấp Đẹp, Chất Lượng Cao ... - Lyly Shop
+url = https://cuahangchangagoidem.com/bo-ga-giuong-cao-cap-dep/
 
