CI images update

--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-25 09:45:46
+lastsearch = 2024-07-25 10:44:59
 
 [www.instagram.com]
-match = -161.5%%
-title = (@katrinacyt) • Instagram photos and videos
-url = https://www.instagram.com/katrinacyt/
+match = -307.7%%
+title = The month of May get ready to me over .. my bday was like ...
+url = https://www.instagram.com/chan_dior_sunshade/p/C7b6vxmxdP7/
 
 [hk.linkedin.com]
 match = -276.9%%
