--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-25 06:16:48
+lastsearch = 2024-07-25 10:53:05
 
 [us.misumi-ec.com]
 match = -350.0%%
@@ -300,4 +300,9 @@ url = https://www.fwe.com/sales-and-support/warranty
 match = -325.0%%
 title = Court ruling will allow student housing at UC Berkeley's ...
 url = https://www.ktalnews.com/news/u-s-world/ap-a-court-ruling-will-allow-new-student-housing-at-university-of-california-berkeleys-peoples-park/
+
+[www.uncfsu.edu]
+match = 0.0%%
+title = 
+url = https://www.uncfsu.edu/about-fsu
 
