--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-25 00:50:39
+lastsearch = 2024-07-25 10:51:43
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -67,8 +67,8 @@ title = The 2023 Florida Statutes (including Special Session C)
 url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.303.html
 
 [sofl.cooperatornews.com]
-match = -176.5%%
-title = Who Do You Call? Fraud, Mismanagement and Rule-Breaking
+match = -152.9%%
+title = Who Do You Call? Fraud, Mismanagement and Rule- ...
 url = https://sofl.cooperatornews.com/article/who-do-you-call
 
 [www.washingtonpost.com]
@@ -257,9 +257,9 @@ title = New Arizona law gets rid of certain parking rules in HOA ...
 url = https://www.azfamily.com/2023/11/08/new-arizona-law-gets-rid-certain-parking-rules-hoa-communities/
 
 [heywoodmanagement.com]
-match = -82.4%%
-title = HOA Special Assessment- What is it ...
-url = https://heywoodmanagement.com/hoa-special-assessment-what-is-it/
+match = -70.6%%
+title = How to Handle HOA Trespassing Incidents
+url = https://heywoodmanagement.com/hoa-tresspassing/
 
 [www.wate.com]
 match = -176.5%%
