--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-25 09:09:09
+lastsearch = 2024-07-25 10:49:00
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/list/giường xếp
 [sofatoanquoc.com]
 match = 30.0%%
 title = Giường ngủ bọc da mã 15
-url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html?srsltid=AfmBOooeM9YdoS14FdA1Uusf1Nn_pUeva6n_NH9vrz2Ql6L61bFOXJ-s
+url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html
 
 [noithathoaphat360.com]
 match = -55.0%%
@@ -47,9 +47,9 @@ title = Bộ giường tủ cổ điển nhập khẩu GR B15
 url = https://greenfurni.vn/bo-giuong-tu-co-dien-nhap-khau-gr-b15/
 
 [noithattana.vn]
-match = -75.0%%
-title = Bộ giường ngủ nhập khẩu Đài Loan cao cấp ...
-url = https://noithattana.vn/giuong-ngu/
+match = -140.0%%
+title = Bộ giường ngủ tân cổ điển giá rẻ đẹp, cao cấp nhập khẩu ...
+url = https://noithattana.vn/giuong-tu-tan-co-dien/
 
 [tiki.vn]
 match = -50.0%%
@@ -59,7 +59,7 @@ url = https://tiki.vn/search?q=thảm trải giường
 [abes.com.vn]
 match = -110.0%%
 title = Bàn giao 15 Giường thẩm mỹ 3 khúc cao cấp Hi-MEC và ...
-url = https://abes.com.vn/blogs/khach-hang-tieu-bieu/ban-giao-15-giuong-tham-my-3-khuc-cao-cap-hi-mec-va-tron-bo-noi-that-t?srsltid=AfmBOoonNEch911ZNlgYW6ZzHF7V-4LtZIVTi1vtCAALesGjN-l5iP24
+url = https://abes.com.vn/blogs/khach-hang-tieu-bieu/ban-giao-15-giuong-tham-my-3-khuc-cao-cap-hi-mec-va-tron-bo-noi-that-t
 
 [giuongngugiare.vn]
 match = -80.0%%
@@ -99,7 +99,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -130.0%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOoq58XToHiqcG-hx-sdFUF8ssZUMsTp9Zg6NjB--kb42CWTeBqY-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [noithatgiakhanh.net]
 match = -105.0%%
